# fysik-verktyg

./: Constants.hs  desmos.html  konstanter.py
constants-united/: LICENSE.md  README.md  constants-united.cabal
constants-united/.stack-work/install/05480a1e/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  SHA-1.6.4.2-6ZuKopcglGG4yoCGsd9koJ  aeson-1.0.2.1-IiYeWJWWMfjD3HYPhhVild  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  attoparsec-0.13.1.0-KwckfZOQnr04d9ofoJ9Hh4  base-compat-0.9.2-3Rp79AeCFKJ4blfnCflOJE  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  case-insensitive-1.2.0.8-336s2tfPdxOEPgnLH8r0bz  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  data-default-0.7.1.1-7EGYJX2YWqWJRbPFUHNoCr  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  data-default-instances-containers-0.0.1-bob6IQGdJq92c061H46zK  data-default-instances-dlist-0.0.1-FKnZBeovJMk4M89wQxDhjl  data-default-instances-old-locale-0.0.1-9zaGDEmgOixKkmLylWdN5l  dlist-0.8.0.2-6Wnps4GD7EFnRucVzXIFD  entropy-0.3.7-7YflRgkwZTRIfjmyKo8scy  hashable-1.2.6.0-3EXxoqeEgbfAKr6aGkye6x  integer-logarithms-1.0.1-IEHCuEd5sG4JjSjlx7m5JF  io-streams-1.3.6.1-h34Y0vk2khHoDW3jgOTjd  io-streams-haproxy-1.0.0.1-9DgCM2zqWqMKeU8g2vAbgk  lifted-base-0.2.3.10-BoEavBFIcriDza63doCjS2  monad-control-1.0.1.0-LQwQ0Hi5p0oAccTfTzbfD5  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  network-2.6.3.1-AwRxOQvT8JM9e8zDFK7aCI  (+27 more)
constants-united/app/: Main.hs
constants-united/src/: Constants.hs  Dimension.hs  Interface.hs
(+6 files in other folders)
