name:                constants-united
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SwiftsNamesake/constants-united#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, <year>
category:            <category>
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Constants, Interface
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , threepenny-gui
  default-language:    Haskell2010

executable constants-united
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , constants-united
  default-language:    Haskell2010

test-suite constants-united-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , constants-united
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/constants-united
